fixed minor details on tablet vw

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,16 @@
   }
 
   .cities-col {
+    width: 300px !important;
+    margin-left: 7px;
     padding: 4px;
+  }
+
+  .pound {
+    margin-right: 20px !important;
+  }
+
+  .right {
+    margin-right: 10px;
   }
 }
